--- a/about-location.html
+++ b/about-location.html
@@ -10,7 +10,7 @@
   <header class="nav">
     <div class="container nav-inner">
       <a class="brand" href="index.html" aria-label="Home">
-        <span class="brand-badge" aria-hidden="true"></span>
+        <img class="brand-logo" src="assets/logo.png" alt="Wholly Rolly! logo" />
         <span data-t="brand_name">Wholly Rolly!</span>
       </a>
       <nav class="nav-links" aria-label="Primary">
