--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <footer class="footer">
       <div class="divider"></div>
       <div style="display:flex; gap:14px; flex-wrap:wrap; justify-content:space-between; align-items:center;">
-        <div>© <span data-year></span> <span data-t="brand_name">Wholly Rolly!</span> • <span data-t="brand_domain">whollyrolly.com</span></div>
-        <div style="display:flex; gap:12px; flex-wrap:wrap;">
+        <div>© <!--<span data-year></span> <span data-t="brand_name">Wholly Rolly!</span> • <span data-t="brand_domain">whollyrolly.com</span></div>
+        <div style="display:flex; gap:12px; flex-wrap:wrap;">-->
           <a href="menu.html">Menu</a>
           <a href="sushi-101.html">Sushi 101</a>
           <a href="about-location.html">Location</a>
