--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       </a>
       <nav class="nav-links" aria-label="Primary">
         <a href="index.html">Home</a>
-        <a href="menu.html">Menu</a>
+        <a href="https://cake.net/11566006" 
+   class="btn-primary"
+   target="_blank"
+   rel="noopener">Menu</a>
         <a href="order.html">Order</a>
         <a href="sushi-101.html">Sushi 101</a>
         <a href="sushi-cuts-quality.html">Cuts & Quality</a>
