--- a/sushi-aging-rice-nori.html
+++ b/sushi-aging-rice-nori.html
@@ -11,7 +11,7 @@
     <div class="container nav-inner">
       <a class="brand" href="index.html" aria-label="Home">
         <img class="brand-logo" src="assets/logo.png" alt="Wholly Rolly! logo" />
-        <span data-t="brand_name">Wholly Rolly!</span>
+        <!--<span data-t="brand_name">Wholly Rolly!</span>-->
       </a>
       <nav class="nav-links" aria-label="Primary">
         <a href="index.html">Home</a>
