--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
       </nav>
       <a class="cta" data-a="order_url" data-attr="href" target="_blank" rel="noopener">
         <span class="dot" aria-hidden="true"></span>
-        <span data-t="home_cta_primary">Order Online</span>
+        <a class="order-btn"
+   href="https://cake.net/11566006"
+   target="_blank"
+   rel="noopener">
+  Order Online
+</a>
+
       </a>
       <a class="cta mobile-cta" data-a="order_url" data-attr="href" target="_blank" rel="noopener">
         <span class="dot" aria-hidden="true"></span>
@@ -50,7 +56,13 @@
 
           <div class="actions">
             <a class="btn btn-primary" data-a="order_url" data-attr="href" target="_blank" rel="noopener">
-              <span data-t="home_cta_primary">Order Online</span>
+              <a class="order-btn"
+   href="https://cake.net/11566006"
+   target="_blank"
+   rel="noopener">
+  Order Online
+</a>
+
             </a>
             <a class="btn" href="menu.html"><span data-t="home_cta_secondary">View Menu</span></a>
             <a class="btn" href="about-location.html"><span data-t="home_cta_third">Get Directions</span></a>
