--- a/sushi-101.html
+++ b/sushi-101.html
@@ -52,7 +52,7 @@
     <section class="limited-cuts card" id="limited-cuts">
       <div class="limited-cuts__header">
         <h2 data-t="lc_hook"></h2>
-        <p class="muted">A quick story from our chibi instructors ✨</p>
+        <p class="muted">A quick lesson from our instructors ✨</p>
       </div>
 
       <div class="limited-cuts__grid">
