--- a/sushi-101.html
+++ b/sushi-101.html
@@ -53,6 +53,12 @@
       <div class="limited-cuts__header">
         <h2 data-t="lc_hook"></h2>
         <p class="muted">A quick lesson from our instructors ✨</p>
+        <img
+  src="assets/Fish-good-bad-ugly.png"
+  alt="Fish quality comparison showing good, bad, and poor cuts"
+  class="education-image"
+/>
+
       </div>
 
       <div class="limited-cuts__grid">
