try adding hamburger menu for phones

--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,11 @@
         <img class="brand-logo" src="assets/logo.png" alt="Wholly Rolly! logo" />
         <!--<span data-t="brand_name">Wholly Rolly!</span>-->
       </a>
+      <button class="hamburger" aria-controls="primary-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="hamburger-lines" aria-hidden="true"></span>
+      </button>
       <nav class="nav-links" aria-label="Primary">
+        
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
         <a href="order.html">Order</a>
