--- a/about-location.html
+++ b/about-location.html
@@ -13,6 +13,35 @@
         <img class="brand-logo" src="assets/logo.png" alt="Wholly Rolly! logo" />
         <span data-t="brand_name">Wholly Rolly!</span>
       </a>
+      <header class="topbar">
+  <a class="brand" href="index.html">
+    <img class="brand-logo" src="assets/logo.png" alt="Wholly Rolly! logo">
+    <!-- remove/hide this text if you don’t want it -->
+    <!-- <span class="brand-name">Wholly Rolly!</span> -->
+  </a>
+
+  <button class="hamburger"
+          aria-controls="primary-nav"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+    <span class="hamburger-lines" aria-hidden="true"></span>
+  </button>
+
+  <nav id="primary-nav" class="nav-links" aria-label="Primary">
+    <a href="index.html">Home</a>
+    <a href="menu.html">Menu</a>
+    <a href="order.html">Order</a>
+    <a href="sushi-101.html">Sushi 101</a>
+    <a href="sushi-cuts-quality.html">Cuts &amp; Quality</a>
+    <a href="sushi-aging-rice-nori.html">Aging, Rice &amp; Nori</a>
+    <a href="about-location.html">About &amp; Location</a>
+  </nav>
+
+  <a class="cta order-cta" href="https://cake.net/11566006" target="_blank" rel="noopener">
+    Order Online
+  </a>
+</header>
+
       <nav class="nav-links" aria-label="Primary">
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
