--- a/about-location.html
+++ b/about-location.html
@@ -1,3 +1,6 @@
+<!-- Shared header mount: app.js injects header here -->
+<div id="site-header"></div>
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -133,6 +136,9 @@
       </div>
     </footer>
   </main>
+  <!-- Shared footer mount: app.js injects footer here -->
+<div id="site-footer"></div>
+
 
   <script src="site-data.js"></script>
   <script src="app.js"></script>
