--- a/order.html
+++ b/order.html
@@ -1,3 +1,6 @@
+<!-- Shared header mount: app.js injects header here -->
+<div id="site-header"></div>
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -73,3 +76,5 @@
   <script src="app.js"></script>
 </body>
 </html>
+<!-- Shared footer mount: app.js injects footer here -->
+<div id="site-footer"></div>
