--- a/sushi-cuts-quality.html
+++ b/sushi-cuts-quality.html
@@ -1,3 +1,6 @@
+<!-- Shared header mount: app.js injects header here -->
+<div id="site-header"></div>
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -65,3 +68,5 @@
   <script src="app.js"></script>
 </body>
 </html>
+<!-- Shared footer mount: app.js injects footer here -->
+<div id="site-footer"></div>
