--- a/menu.html
+++ b/menu.html
@@ -1,3 +1,7 @@
+<!-- Load site data first, then app logic -->
+<script src="site-data.js"></script>
+<script src="app.js"></script>
+
 <!-- Shared header mount: app.js injects header here -->
 <div id="site-header"></div>
 
