--- a/order.html
+++ b/order.html
@@ -2,6 +2,8 @@
 <script src="site-data.js"></script>
 <script src="app.js"></script>
 
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 <!-- Shared header mount: app.js injects header here -->
 <div id="site-header"></div>
 
