--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-
-
 <!doctype html>
-
-
-<div id="site-header"></div>
-
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -13,48 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body data-page="home">
-  <header class="nav">
-    <div class="container nav-inner">
-      <a class="brand" href="index.html" aria-label="Home">
-        <img class="brand-logo" src="assets/logo.png" alt="Wholly Rolly! logo" />
-        <!--<span data-t="brand_name">Wholly Rolly!</span>-->
-      </a>
-      <nav class="nav-links" aria-label="Primary">
-        <a href="index.html">Home</a>
-        <a href="https://cake.net/11566006" 
-   class="btn-primary"
-   target="_blank"
-   rel="noopener">Menu</a>
-        <a href="order.html">Order</a>
-        <a href="sushi-101.html">Sushi 101</a>
-        <a href="sushi-cuts-quality.html">Cuts & Quality</a>
-        <a href="sushi-aging-rice-nori.html">Aging, Rice & Nori</a>
-        <a href="about-location.html">About & Location</a>
-      </nav>
-      <a class="cta" data-a="order_url" data-attr="href" target="_blank" rel="noopener">
-  <span class="dot" aria-hidden="true"></span>
-  <a class="order-btn"
-     href="https://cake.net/11566006"
-     target="_blank"
-     rel="noopener">
-    Order Online
-  </a>
-</a>
-
-</a>
-
-</a>
-
-      </a>
-      <a class="cta mobile-cta" data-a="order_url" data-attr="href" target="_blank" rel="noopener">
-        <span class="dot" aria-hidden="true"></span>
-        Order
-      </a>
-    </div>
-  </header>
+  <div id="site-header"></div>
 
   <main class="container">
-
     <section class="hero">
       <div class="hero-grid">
         <div class="card hero-main">
@@ -62,18 +17,13 @@
             <span class="pill" data-t="brand_kicker_left">Fresh • Crafted • Fun</span>
             <span style="color:rgba(183,192,216,.95); font-weight:900;" data-t="brand_kicker_right">Sushi Bar</span>
           </div>
+
           <h1 class="h1" data-t="home_headline">Sushi that hits different.</h1>
           <p class="lead" data-t="home_subhead"></p>
 
           <div class="actions">
             <a class="btn btn-primary" data-a="order_url" data-attr="href" target="_blank" rel="noopener">
-              <a class="order-btn"
-   href="https://cake.net/11566006"
-   target="_blank"
-   rel="noopener">
-  Order Online
-</a>
-
+              <span data-t="home_cta_primary">Order Online</span>
             </a>
             <a class="btn" href="menu.html"><span data-t="home_cta_secondary">View Menu</span></a>
             <a class="btn" href="about-location.html"><span data-t="home_cta_third">Get Directions</span></a>
@@ -114,23 +64,11 @@
       </div>
     </section>
 
-    <footer class="footer">
-      <div class="divider"></div>
-      <div style="display:flex; gap:14px; flex-wrap:wrap; justify-content:space-between; align-items:center;">
-        <div>© <!--<span data-year></span> <span data-t="brand_name">Wholly Rolly!</span> • <span data-t="brand_domain">whollyrolly.com</span></div>
-        <div style="display:flex; gap:12px; flex-wrap:wrap;">-->
-          <a href="menu.html">Menu</a>
-          <a href="sushi-101.html">Sushi 101</a>
-          <a href="about-location.html">Location</a>
-        </div>
-      </div>
-    </footer>
+    <div id="site-footer"></div>
   </main>
 
   <script src="site-data.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
-<!-- Shared footer mount: app.js injects footer here -->
-<div id="site-footer"></div>
 
