--- a/order.html
+++ b/order.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body data-page="order">
+  <!-- Shared header mount -->
   <div id="site-header"></div>
 
   <main class="container">
@@ -28,11 +29,18 @@
 
     <section class="section">
       <h2>How it works</h2>
-      <div class="grid3" id="order-steps"></div>
+      <div class="grid3" id="order-steps"></div> <!-- Steps will be injected here -->
     </section>
 
+    <!-- Shared footer mount -->
     <div id="site-footer"></div>
   </main>
+
+  <script src="site-data.js"></script>
+  <script src="app.js"></script>
+</body>
+</html>
+
 
   <script src="site-data.js"></script>
   <script src="app.js"></script>
