--- a/sushi-aging-rice-nori.html
+++ b/sushi-aging-rice-nori.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aging, Rice & Nori — Wholly Rolly!</title>
+  <title>Aging, Rice &amp; Nori — Wholly Rolly!</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body data-page="aging">
+  <!-- Shared header mount -->
   <div id="site-header"></div>
 
   <main class="container">
@@ -16,13 +17,14 @@
     </section>
 
     <section class="section">
-      <div class="grid3" id="aging-sections"></div>
+      <div class="grid3" id="aging-sections"></div> <!-- Sections injected here from site-data -->
       <div class="actions" style="margin-top:14px;">
         <a class="btn" href="sushi-101.html">Back to Sushi 101</a>
-        <a class="btn btn-primary" href="about-location.html">About & Location</a>
+        <a class="btn btn-primary" href="about-location.html">About &amp; Location</a>
       </div>
     </section>
 
+    <!-- Shared footer mount -->
     <div id="site-footer"></div>
   </main>
 
@@ -30,3 +32,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
