--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
       <h2>What people are saying about Wholly Rolly!</h2>
       <div class="carousel-container">
         <div class="carousel-track">
-          <img src="assets/reviews/1.jpg" alt="Review 1" />
-          <img src="assets/reviews/2.jpg" alt="Review 2" />
-          <img src="assets/reviews/3.jpg" alt="Review 3" />
-          <img src="assets/reviews/4.jpg" alt="Review 4" />
-          <img src="assets/reviews/5.jpg" alt="Review 5" />
-          <img src="assets/reviews/6.jpg" alt="Review 6" />
-          <img src="assets/reviews/7.jpg" alt="Review 7" />
-          <img src="assets/reviews/8.jpg" alt="Review 8" />
-          <img src="assets/reviews/9.jpg" alt="Review 9" />
-          <img src="assets/reviews/10.jpg" alt="Review 10" />
+          <img src="assets-reviews/1.jpg" alt="Review 1" />
+          <img src="assets-reviews/2.jpg" alt="Review 2" />
+          <img src="assets-reviews/3.jpg" alt="Review 3" />
+          <img src="assets-reviews/4.jpg" alt="Review 4" />
+          <img src="assets-reviews/5.jpg" alt="Review 5" />
+          <img src="assets-reviews/6.jpg" alt="Review 6" />
+          <img src="assets-reviews/7.jpg" alt="Review 7" />
+          <img src="assets-reviews/8.jpg" alt="Review 8" />
+          <img src="assets-reviews/9.jpg" alt="Review 9" />
+          <img src="assets-reviews/10.jpg" alt="Review 10" />
         </div>
         <button class="carousel-arrow left" aria-label="Previous reviews">&#10094;</button>
         <button class="carousel-arrow right" aria-label="Next reviews">&#10095;</button>
