Update headlines and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span style="color:rgba(183,192,216,.95); font-weight:900;" data-t="brand_kicker_right">Sushi Bar</span>
           </div>
 
-          <h1 class="h1" data-t="home_headline">Sushi that hits different.</h1>
+          <h1 class="h1" data-t="home_headline">Wholly Nutritious! Wholly Delicious!.</h1>
           <p class="lead" data-t="home_subhead"></p>
 
           <div class="actions">
@@ -63,7 +63,7 @@
 
     <section class="section">
       <h2>Sushi 101</h2>
-      <p>Want customers to understand quality? We make it fun. Chibi instructors included.</p>
+      <p>What makes good sushi? Our instructors make learning fun!</p>
       <div class="actions" style="margin-top:12px;">
         <a class="btn btn-primary" href="sushi-101.html">Go to Sushi 101</a>
       </div>
