--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
     </section>
 
     <section class="section">
-      <h2>Featured</h2>
+      <h2>You are what you eat! That is why we are not fast, easy, or cheap! What does that mean? 
+        We take our time. 
+        Don't take shortcuts. 
+        We use premium ingredients. </h2>
       <p>These are placeholders—edit them in <strong>site-data.js</strong> anytime.</p>
       <div class="grid3" id="home-featured"></div> <!-- Featured items will be injected -->
     </section>
