Fix heading tag by removing extra punctuation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span style="color:rgba(183,192,216,.95); font-weight:900;" data-t="brand_kicker_right">Sushi Bar</span>
           </div>
 
-          <h1 class="h1" data-t="home_headline">Wholly Nutritious! Wholly Delicious!.</h1>
+          <h1 class="h1" data-t="home_headline">Wholly Nutritious! Wholly Delicious!</h1>
           <p class="lead" data-t="home_subhead"></p>
 
           <div class="actions">
